<resources>
    <string name="app_name">TravelShare</string>
    <string name="launcher_title">Choisissez votre espace</string>
    <string name="launcher_subtitle">Accedez a TravelShare ou TravelPath depuis la meme application.</string>
    <string name="launcher_travelshare">Ouvrir TravelShare</string>
    <string name="launcher_travelpath">Ouvrir TravelPath</string>
    <string name="travelshare_feed_guest_hint">Mode invite : connectez-vous pour publier et commenter.</string>
    <string name="travelshare_feed_signed_in">Vous etes connecte. Publication activee.</string>
    <string name="travelshare_location_change">Modifier le lieu</string>
    <string name="travelshare_location_none">Aucun lieu associe a ce post.</string>
    <string name="travelshare_location_selected">Lieu selectionne : %1$s</string>
    <string name="travelshare_location_tag">Taguer un lieu dans TravelPath</string>
    <string name="travelshare_keywords_hint">Mots-cle separes par des virgules</string>
    <string name="travelshare_search_hint">Rechercher un mot-cle, un lieu ou un utilisateur</string>
    <string name="travelshare_author_avatar_content_description">Photo de profil de l auteur</string>
    <string name="travelshare_search_keyword_summary">Recherche texte active : %1$s</string>
    <string name="travelshare_search_no_results">Aucun post ne correspond a %1$s.</string>
    <string name="travelshare_search_place_loading">Recherche des posts proches de %1$s...</string>
    <string name="travelshare_search_place_mode_summary">Mode lieu actif : %1$s</string>
    <string name="travelshare_search_place_not_found">Lieu introuvable pour %1$s.</string>
    <string name="travelshare_search_place_summary">Resultats autour de %1$s dans un rayon de %2$d km.</string>
    <string name="travelshare_search_place_empty">Aucun post geolocalise pres de %1$s.</string>
    <string name="travelshare_place_mode_off">Mode lieu desactive</string>
    <string name="travelshare_place_mode_on">Mode lieu active</string>
    <string name="travelshare_sign_in">Se connecter</string>
    <string name="travelshare_publish">Publier une photo</string>
    <string name="travelshare_publish_locked">Connexion requise pour publier</string>
    <string name="travelshare_post_requires_auth">Connectez-vous dans TravelShare pour publier.</string>
    <string name="travelshare_delete_post">Supprimer</string>
    <string name="travelshare_edit_post">Modifier</string>
    <string name="travelshare_edit_post_title">Modifier le post</string>
    <string name="travelshare_edit_post_confirm">Enregistrer</string>
    <string name="travelshare_edit_success">Post mis a jour.</string>
    <string name="travelshare_edit_failure">Impossible de modifier ce post.</string>
    <string name="travelshare_edit_not_allowed">Vous ne pouvez modifier que vos propres posts.</string>
    <string name="travelshare_like_post">J aime (%1$d)</string>
    <string name="travelshare_unlike_post">Retirer le like (%1$d)</string>
    <string name="travelshare_like_post_default">J aime (0)</string>
    <string name="travelshare_comment_post">Commenter (%1$d)</string>
    <string name="travelshare_comment_post_default">Commenter (0)</string>
    <string name="travelshare_like_failure">Impossible de mettre a jour le like.</string>
    <string name="travelshare_like_content_description">Liker</string>
    <string name="travelshare_unlike_content_description">Retirer le like</string>
    <string name="travelshare_comment_content_description">Ouvrir les commentaires</string>
    <string name="travelshare_edit_content_description">Modifier le post</string>
    <string name="travelshare_delete_content_description">Supprimer</string>
    <string name="travelshare_delete_post_title">Supprimer ce post ?</string>
    <string name="travelshare_delete_post_message">Cette action est definitive.</string>
    <string name="travelshare_delete_post_confirm">Supprimer</string>
    <string name="travelshare_delete_post_cancel">Annuler</string>
    <string name="travelshare_delete_success">Post supprime.</string>
    <string name="travelshare_delete_failure">Suppression impossible.</string>
    <string name="travelshare_delete_not_allowed">Vous ne pouvez supprimer que vos propres posts.</string>
    <string name="travelshare_feed_empty">Aucun post pour le moment.</string>
    <string name="travelshare_feed_focus_summary">Post TravelShare ouvert depuis la carte : %1$s</string>
    <string name="travelshare_feed_focus_missing">Le post selectionne n est plus disponible.</string>
    <string name="travelshare_feed_error">Impossible de charger les posts. Verifiez Firestore, les regles et la connexion.</string>
    <string name="travelshare_feed_error_with_code">Impossible de charger les posts (%1$s). Verifiez Firestore, les regles et la connexion.</string>
    <string name="travelshare_comment_thread_title">Commentaires</string>
    <string name="travelshare_comment_thread_header">Discussion avec %1$s\n%2$s</string>
    <string name="travelshare_comment_unknown_author">Voyageur</string>
    <string name="travelshare_comment_no_description">Sans description</string>
    <string name="travelshare_comment_empty">Aucun commentaire pour le moment.</string>
    <string name="travelshare_comment_load_failure">Impossible de charger les commentaires.</string>
    <string name="travelshare_comment_required">Entrez un commentaire.</string>
    <string name="travelshare_comment_send_failure">Impossible d envoyer le commentaire.</string>
    <string name="travelshare_comment_input_hint">Ajouter un commentaire</string>
    <string name="travelshare_comment_send">Commenter</string>
    <string name="travelshare_comment_like">J aime (%1$d)</string>
    <string name="travelshare_comment_unlike">Retirer le like (%1$d)</string>
    <string name="travelshare_comment_like_default">J aime (0)</string>
    <string name="travelshare_comment_like_failure">Impossible de mettre a jour le like du commentaire.</string>
    <string name="travelshare_comment_delete">Supprimer</string>
    <string name="travelshare_comment_delete_success">Commentaire supprime.</string>
    <string name="travelshare_comment_delete_failure">Impossible de supprimer le commentaire.</string>
    <string name="travelshare_comment_delete_not_allowed">Vous ne pouvez supprimer que vos propres commentaires.</string>
    <string name="profile_button_content_description">Ouvrir le profil</string>
    <string name="profile_title">Profil</string>
    <string name="profile_avatar_content_description">Photo de profil par defaut</string>
    <string name="profile_change_photo_button">Changer la photo</string>
    <string name="profile_email_label">Email</string>
    <string name="profile_username_label">Nom d utilisateur</string>
    <string name="profile_username_hint">Votre nom public</string>
    <string name="profile_password_label">Nouveau mot de passe</string>
    <string name="profile_password_hint">Laisser vide pour conserver le mot de passe actuel</string>
    <string name="profile_save_button">Enregistrer les modifications</string>
    <string name="profile_loading">Chargement du profil...</string>
    <string name="profile_save_in_progress">Enregistrement du profil...</string>
    <string name="profile_username_required">Le nom d utilisateur est obligatoire.</string>
    <string name="profile_password_too_short">Le mot de passe doit contenir au moins 6 caracteres.</string>
    <string name="profile_save_success">Profil mis a jour.</string>
    <string name="profile_save_partial_username">Nom d utilisateur mis a jour, mais Firestore a refuse la synchronisation. Ajoutez la regle Firestore.</string>
    <string name="profile_save_failure">Impossible de mettre a jour le profil.</string>
    <string name="profile_password_recent_login">Pour changer le mot de passe, reconnectez-vous puis recommencez.</string>
    <string name="profile_load_warning">Impossible de charger le profil Firestore. Valeurs locales affichees.</string>
    <string name="profile_avatar_selection_error">Impossible de lire cette image.</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>